@@ -55,6 +55,7 @@ This release includes the following bugfixes:
  o curlbuild.h.dist: enhance non-configure GCC ABI detection logic
  o sasl: Fixed null pointer reference when decoding empty digest challenge [8]
  o easy: do not ignore poll() failures other than EINTR
+ o darwinssl: disable ECC ciphers under Mountain Lion by default
 
 This release includes the following known bugs:
 
